Closed
Bug 442715
Opened 17 years ago
Closed 16 years ago
-moz-border-radius does not render properly in speed.
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| status1.9.2 | --- | beta2-fixed |
People
(Reporter: mccarre, Assigned: roc)
References
()
Details
Attachments
(2 files)
|
604 bytes,
text/html
|
Details | |
|
4.84 KB,
patch
|
dbaron
:
review+
dbaron
:
approval1.9.2+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.1a1pre) Gecko/2008063003 Minefield/3.1a1pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.1a1pre) Gecko/2008063003 Minefield/3.1a1pre
The url shows what I mean, and this only happens while I'm resizing an element or more specificly a div with a rounded border. The radius is being applied in a seperate css file, and it's set to 20px. I have the most recent nightly build as would be indicated by the build identifier. I'm using an 8800gtx and q6600, so I can't see it being an issue of not being able to render fast enough.
If I'm mistaken on my methods of applying a rounded border, expecting it to render fine while being re sized, than I apologize.
To give perspective; trying the same effect in safari it cheats and turns the border into a sharp edged border before finishing the rendering and turning it back into a rounded border and it is completely smooth, however not exactly what I expect.
Reproducible: Always
Steps to Reproduce:
1.create a div and give it a border using -moz-border-radius: 20px
2.resize the div using timers (in order to see it clearly, one second for each 200 px)
Actual Results:
I see what is shown by the link I included, under the URL field.
Expected Results:
a straight outer border, and clean rounded corners.
This is my first time reporting a bug for anything, however although I'm a noob at bug reporting, I'm an open-minded comp. sci. student, so if you need more info just tell me and I'll do my best to provide it.
about:buildconfig
Build platform
target
i686-pc-mingw32
Build tools
Compiler Version Compiler flags
cl 14.00.50727.762 -TC -nologo -W3 -Gy -Fd$(PDBFILE)
cl 14.00.50727.762 -GR- -TP -nologo -Zc:wchar_t- -W3 -Gy -Fd$(PDBFILE)
Configure arguments
--enable-application=browser --enable-update-channel=nightly --enable-update-packaging --enable-jemalloc
Component: General → DOM: Mozilla Extensions
Product: Firefox → Core
QA Contact: general → general
Version: unspecified → Trunk
I can confirm, it happens with every object that is resized dynamicaly.
Testcase confirmed on Trunk
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows Vista → All
Updated•16 years ago
|
Component: DOM: Mozilla Extensions → Layout
QA Contact: general → layout
| Assignee | ||
Comment 3•16 years ago
|
||
Easy fix
Assignee: nobody → roc
Attachment #402714 -
Flags: review?(dbaron)
Comment on attachment 402714 [details] [diff] [review]
fix
>+ // Invalidate the old frame background if the frame has a background
>+ // that is being clipped by border-radius, since we may be moving or
>+ // changing the shape of those borders (even if only the top-left
>+ // corner has a border)
I had trouble understanding this description. Perhaps it should instead end with something like:
since the old or new area clipped off by the radius is not necessarily in the area that has already been invalidated (even if only the top-left corner has a border radius).
(Note also insertion of "radius" at the end.)
r=dbaron
Attachment #402714 -
Flags: review?(dbaron) → review+
| Assignee | ||
Comment 5•16 years ago
|
||
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Whiteboard: [needs 192 approval]
| Assignee | ||
Updated•16 years ago
|
Attachment #402714 -
Flags: approval1.9.2?
Comment on attachment 402714 [details] [diff] [review]
fix
a1.9.2=dbaron
Attachment #402714 -
Flags: approval1.9.2? → approval1.9.2+
| Assignee | ||
Updated•16 years ago
|
Whiteboard: [needs 192 approval] → [needs 192 landing]
| Assignee | ||
Comment 7•16 years ago
|
||
status1.9.2:
--- → final-fixed
Whiteboard: [needs 192 landing]
You need to log in
before you can comment on or make changes to this bug.
Description
•