Bug 442715. Invalidate the whole border-box when an element's size changes and its background is being clipped by a border-radius. r=dbaron